# flask-best-sellers-api

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  run.sh  wsgi.py
coding_task_be/: __init__.py  db.py  models.py  routes.py  schema.sql
instance/: data.db
tests/: __init__.py  test_coding_task_be.py
tests/test_data/: api_v1_sellers_top.json
