[tool.poetry]
name = "coding_task_be"
version = "v1.0.0"
description = "Coding Task BE"
authors = ["Mark"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"
flask-sqlalchemy = "^3.0.2"
uvicorn = "^0.19.0"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
